--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: windows-build
-          path: build/windows
+          path: build/windows/x64/runner/Release/
 
   # 构建Linux版本
   build-linux:
@@ -39,7 +39,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-build
-          path: build/linux
+          path: build/linux/x64/release/
 
   # 构建MacOS版本
   build-macos:
@@ -55,7 +55,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: macos-build
-          path: build/macos
+          path: build/macos/Build/Products/Release/
 
   # 构建iOS版本
   build-ios:
@@ -71,7 +71,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ios-build
-          path: build/ios
+          path: build/ios/Release-iphoneos/
 
   # 构建Android版本（仅ARMv7和ARMv8）
   build-android:
@@ -90,7 +90,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: android-builds
-          path: build/app/outputs/apk
+          path: build/app/outputs/flutter-apk/
 
   # 创建GitHub Release
   create-release:
@@ -128,6 +128,11 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ./artifacts/**/*
+          files: |
+            ./artifacts/windows/*.exe
+            ./artifacts/linux/xenc
+            ./artifacts/macos/*.app
+            ./artifacts/ios/*.app
+            ./artifacts/android/*.apk
           generate_release_notes: true
           tag_name: v${{ github.run_number }}
